Release CMTK-3.0.1:

(r5185) Added: for convenience, histogram- and mean/sdev-based intensity
	matching are now also available in "convertx", in addition to
	"imagemath".
(r5183) Fixed: use of MacPorts should be optional, even if its directory
	tree exists.
(r5183) Fixed: CUDA should be optional and build config file clearly
	labelled if it is used.
(r5166) Added: polynomial transformation model and class to fit such
	transformations to landmarks.
(r5157) Changed: "reformatx" no longer corrects Jacobian maps for global
	scale by default. This seems like a more natural way to do this.
(r5154) Added/changed: "unwarp_image_phantom" tool now supports (and
	defaults to) polynomial transformations, rather then B-spline
	FFD.

Release CMTK-3.0.0 (2014-01-09):

(r5122) Fixed: wrong offset computation broke fitting of B-spline
	transformation to transformation series.
(r5121) Fixed: over 200 code defects identified by static analysis
	(Coverity Scan) have been fixed over the past 200 or so commits.
(r5110) Fixed: fitting a B-spline transformation to an XformList that
	contained a nonrigid transformation, specifically a numerically
	inverted one, did not properly exclude locations where the
	inversion failed or the input location was outside the B-spline
	grid's support region.
(r5097) Added: "streamxform" tool can now apply only affine components of all
        provided transformations, via the "--affine-only" option (contribution
        from Greg Jefferis).
(r5087) Changed: "dwi_find_bad_slices" now more appropriately named
        "dwi_mask_bad_slices". Tool can now mask detected bad slices, convert
        image pixel type, and write masked images.
(r5012) Added: "dcm2image" tool (and cmtkIO library) now determine "dwell
        time" from DICOMs from both GE and Siemens scanners. This is necessary
        for applying fieldmap-based distortion corrections.
(r5008) Added: new "resample" operator for "convertx" tool to create